[package]
name = "ruuun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.1", features = ["full"] }
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
strava_client = "0.1.0"
log = "0.4.17"
env_logger = "0.9.1"